[package]
name = "veil"
version = "0.1.0"
authors = ["ivoronin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
#libc = "0.2.94"
libc = { git = "https://github.com/rust-lang/libc", rev = "a8459287a19ab717352e59994a29f456291167ae" }

[lib]
crate-type = ["cdylib"]
